<resources>
    <string name="app_name">PillBug</string>
    <string name="patient_title">Patient:</string>
    <string name="status_title">Status:</string>
    <string name="am_title">AM:</string>
    <string name="pm_title">PM:</string>
    <string name="notes_title">Notes:</string>
    <string name="status_good">Good</string>
    <string name="status_bad">Bad</string>
    <string name="status_taken">Taken</string>
    <string name="status_scheduled">Scheduled</string>
    <string name="status_missed">Missed</string>
    <string name="status_none">None</string>

    <string name="left_arrow">\u003C</string>
    <string name="right_arrow">\u003E</string>

    <string name="login_title">Login</string>

    <string name="curr_month">April 2018</string>
    <string name="curr_date">Sunday, April 7th</string>

    <string name="username">\Username: </string>
    <string name="password">\Password: </string>
    <string name="title_activity_week_view2">Weekly View</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_calendar_view">Calendar View</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
