<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalendarLogView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight=".2"
            android:background="@drawable/day"
            android:onClick="viewWeek"
            android:scaleType="center"
            tools:layout_editor_absoluteX="194dp"
            tools:layout_editor_absoluteY="239dp" />
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@color/blackColor"
            android:onClick="logout"/>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/setting"
            android:layout_width="5dp"
            android:layout_height="40dp"
            android:layout_weight=".4"
            android:background="@drawable/refresh"
            tools:layout_editor_absoluteX="194dp"
            tools:layout_editor_absoluteY="239dp" />
    </LinearLayout>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/calendarView1"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:mcv_showOtherDates="all"
        app:mcv_selectionColor="#00F"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="-50sp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:layout_marginLeft="20sp"
                android:fontFamily="@font/quicksand_medium"
                android:text="Date:"
                android:textSize="24sp"
                android:textColor="@color/whiteColor"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/am"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/am_title"
                android:textSize="24sp"
                android:textColor="@color/whiteColor"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/pm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/pm_title"
                android:textSize="24sp"
                android:textColor="@color/whiteColor"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/notes_title"
                android:textSize="24sp"
                android:textColor="@color/whiteColor"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
